# rust-recioes

./: Cargo.toml  api.http
docker/: docker-compose.yml  mongo-init.js
resources/: config.toml  test_config.toml
src/: config.rs  helpers.rs  main.rs
src/domain/: create_recipe.rs  delete_one_recipe.rs  find_all_recipes.rs  find_one_recipe.rs  mod.rs  recipe.rs  update_recipe.rs
src/driven/repository/: mod.rs
src/driven/repository/mongo/: recipe.rs
src/driven/repository/recipe/: mod.rs
src/driving/rest_handler/: errors.rs  mod.rs  recipes.rs  validate.rs
src/driving/rest_handler/recipes/: create.rs  delete.rs  find.rs  get_by_id.rs  mod.rs  update.rs
src/tests/: test_utils.rs
